feat(proxy): optimize renew logic on error reply (#400)